# cvPlay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  GoldenGateBackGround.cpp  Makefile  README.md  __DisplayImg_c.cpp  canvas.html  cmake_install.cmake  index.html  leadingEdge.cpp  leadingEdgeBlack.cpp  params.json  spiral.py
